--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,7 @@ phases:
   pre_build:
     commands:
       # Discover and run unit tests. For more information, see <https://docs.pytest.org/en/latest/goodpractices.html>
+      - pip install -r requirements.txt
       - python setup.py pytest
 
       # Do not remove this statement. This command is required for AWS CodeStar projects.
